# solver

./: Makefile  pyproject.toml
src/: cell.py  line.py  main.py  maze.py  point.py  window.py
