[tool.poetry]
name = "boot-maze-solver"
version = "0.1.0"
description = ""
authors = ["Jarrod Seccombe <jarrod.seccombe@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.1"
mypy = "^1.9.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
